initial Listener implementation